Search form added

--- a/Views/Book/SearchResult.cshtml
+++ b/Views/Book/SearchResult.cshtml
@@ -6,7 +6,7 @@
 
 <div class="text-center">
 
-    <h1 class="display-4">Display a Book</h1>
+    <h1 class="display-4">Search result</h1>
     <br>
     @foreach (var b in Model.BookList){
     <h3>Title: @b.Title</h3>
