--- a/Views/Book/Index.cshtml
+++ b/Views/Book/Index.cshtml
@@ -12,7 +12,14 @@
     <h3>Title: @b.Title</h3>
      <h3>Author: @b.BookAuthor</h3>
     <h3>Published on: @b.Year</h3>
+   <form asp-area="" asp-controller="Book" asp-action="AddBookCopy" asp-route-id=@b.BookId method="post">
+              
+            <br/>
+            <button type="submit">Add a copy</button>
+             </form>
     <br>
+   
+   
     }
     
 
