--- a/Views/Book/Index.cshtml
+++ b/Views/Book/Index.cshtml
@@ -17,7 +17,9 @@
             <br/>
             <button type="submit">Add a copy</button>
              </form>
+             
     <br>
+     <a asp-area="" asp-controller="Book" asp-action="Checkout">Checkout this book</a>
    
    
     }
